up deps
include new cljs, tools repl, and leiningen